fix:minor padding fixes in navbar and z-index correction in the bannertext

--- a/src/styles.css
+++ b/src/styles.css
@@ -65,11 +65,7 @@ body::-webkit-scrollbar-thumb {
     display: none;
   }
   .landingimg {
-    width: auto;
-    height: 1080px;
-    z-index: -1;
     position: relative;
-    bottom: 300px;
     right: 650px;
   }
 }
@@ -95,19 +91,21 @@ body::-webkit-scrollbar-thumb {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 10px 90px;
+  padding: 10px 4vw;
   text-decoration: none;
   font-size: 17px;
-  padding-right: 30px;
+  position: relative;
+  top: 5px;
 }
 /* Change the color of links on hover */
 .navitem:hover {
   background-color: #ddd;
   color: black;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
+  padding-top: 10px;
 }
 .search-bar {
-  padding: 5px 50px;
+  padding: 5px 3vw;
   border-radius: 10px;
   opacity: 0.5;
   margin: 0% 5px;
@@ -119,7 +117,7 @@ body::-webkit-scrollbar-thumb {
 .topnav .icon {
   display: none;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1400px) {
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -130,7 +128,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1400px) {
   .topnav.responsive {
     position: sticky;
     top: 0px;
@@ -155,6 +153,7 @@ body::-webkit-scrollbar-thumb {
   background: none;
   position: relative;
   bottom: 750px;
+  z-index: -1;
   font-family: "Poppins", sans-serif;
   font-size: 3rem;
   justify-content: left;
